--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -1,9 +1,10 @@
+<!-- Validated through https://validator.w3.org/nu/#file 2020-12-11 10:52 with no errors or warnings -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="School assignment">
+    <meta name="description" content="School assignment creating a personal portfolio using Bootstrap template">
     <meta name="author" content="Annika Rengfelt">
     <title>Frontend > Uppgift 2: Bare - Start Bootstrap Template</title>
   
@@ -47,7 +48,7 @@
             <div class="col-lg-6">
             <p class="lead">Annika Rengfelt, born in cold winter 1986, lives in Sundbyberg, Stockholm.</p>
             <p>I've loved the internet since I was twelve and learned HTML from a book. I think my first website was about horses.</p>
-            <p>Now training to be a specialist in testing and quality assurance. Especially interested in simplicity and availability since I believe that available content is better for everyone and that all people should be able to enjoy great services.</p>
+            <p>Now training to be a specialist in software testing and quality assurance. Especially interested in simplicity and availability since I believe that available content is better for everyone and that all people should be able to enjoy great services.</p>
             <p>Proficient in Word, Excel and PowerPoint.</p>
           </div>
 
@@ -137,9 +138,13 @@
           <p>Accessibillity testing based on the Act on Accessibility to Digital Public Services with a special focus on documents (.pdf) distributed via the website. The law has been in force since 1 January 2019 for all public websites in the EU. The scope has been adapted to the time limits when different parts of the Web Accessibility Directive must be met.</p>
           <ul> <!-- 5 bullets max -->
             <li>Individual project, 20 hours</li>
-            <li>Focusing on capability, reliability och usability limited to WCAG A-levels 1.1.1, 1.3.2, 1.3.1 and 1.3.4</li>
+            <li>Focusing on capability, reliability och usability limited to WCAG A&#8209;levels 
+              <a href="https://www.w3.org/TR/WCAG21/#non-text-content" title="WCAG 1.1.1 Non-text content" target="_blank">1.1.1</a>, 
+              <a href="https://www.w3.org/TR/WCAG21/#info-and-relationships" title="WCAG 1.3.1 Info and relationships" target="_blank">1.3.1</a>,  
+              <a href="https://www.w3.org/TR/WCAG21/#meaningful-sequence" title="WCAG 1.3.2 Meaningful sequence" target="_blank">1.3.2</a> and 
+              <a href="https://www.w3.org/TR/WCAG21/#orientation" title="WCAG 1.3.4 Orientation" target="_blank">1.3.4</a></li>
             <!-- TODO: Link WCAG-rules -->
-            <li>Deliverables: STP, STD, STC, STCR, STR, SDR, STS</li>
+            <li>Deliverables: <abbr title="Software Test Plan">STP</abbr>, <abbr title="Software Test Design">STD</abbr>, <abbr title="Software Test Cases">STC</abbr>, <abbr title="Software Test Case Report">STCR</abbr>, <abbr title="Software Test Report">STR</abbr>, <abbr title="Software Deviations Report">SDR</abbr>, <abbr title="Software Test Summary">STS</abbr></li>
           </ul>
           </div>
         </div>
@@ -155,13 +160,13 @@
           <div class="col-lg-6 cols-md-12">
             <div>
               <p class="lead">Test object: Fashion e-commerce site</p><!-- About 20 words -->
-              <p>Student assignment involving system, regression and re-testing of e-commerce site to be carried out according to the test process (analysis, design, execution and report) learned throughout the course.</p>
+              <p>Student assignment involving system, regression and re-testing of e&#8209;commerce site to be carried out according to the test process (analysis, design, execution and summary report) learned throughout the course.</p>
             </div>
             <div>
              <ul> <!-- 5 bullets max -->
                <li>Group project, 170 hours in total</li>
                <li>Focusing on capability, reliability and compatibility for functions of search and filter products, shopping cart and check out</li>
-               <li>Deliverables: STP, STD&nbsp;x&nbsp;2, STC&nbsp;x&nbsp;2, STCR&nbsp;x&nbsp;2, STR&nbsp;x&nbsp;2, SDR, STS</li>
+               <li>Deliverables: <abbr title="Software Test Plan">STP</abbr>, <abbr title="Software Test Design">STD</abbr>&nbsp;x&nbsp;2, <abbr title="Software Test Cases">STC</abbr>&nbsp;x&nbsp;2, <abbr title="Software Test Case Report">STCR</abbr>&nbsp;x&nbsp;2, <abbr title="Software Test Report">STR</abbr>&nbsp;x&nbsp;2, <abbr title="Software Deviations Report">SDR</abbr>, <abbr title="Software Test Summary">STS</abbr></li>
              </ul>
             </div>
           </div>
